// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`state active 1`] = `
<SelectToggle
  aria-label=""
  aria-labelledby=""
  className=""
  hasClearButton={false}
  id="Select Toggle"
  isActive={true}
  isDisabled={false}
  isFocused={false}
  isHovered={false}
  isOpen={false}
  isPlain={false}
  onClose={[Function]}
  onEnter={[Function]}
  onToggle={[Function]}
  parentRef={
    Object {
      "current": <div />,
    }
  }
  type="button"
  variant="single"
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby=""
    className="pf-c-select__toggle pf-m-active"
    disabled={false}
    id="Select Toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Select
    <CaretDownIcon
      className="pf-c-select__toggle-arrow"
    >
      <SVGIcon
        className="pf-c-select__toggle-arrow"
        color="currentColor"
        config={
          Object {
            "height": 512,
            "name": "CaretDownIcon",
            "svgPath": "M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z",
            "transform": "",
            "width": 320,
            "xOffset": 0,
            "yOffset": 0,
          }
        }
        noVerticalAlign={false}
        size="sm"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-select__toggle-arrow"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </SVGIcon>
    </CaretDownIcon>
  </button>
</SelectToggle>
`;

exports[`state focus 1`] = `
<SelectToggle
  aria-label=""
  aria-labelledby=""
  className=""
  hasClearButton={false}
  id="Select Toggle"
  isActive={false}
  isDisabled={false}
  isFocused={true}
  isHovered={false}
  isOpen={false}
  isPlain={false}
  onClose={[Function]}
  onEnter={[Function]}
  onToggle={[Function]}
  parentRef={
    Object {
      "current": <div />,
    }
  }
  type="button"
  variant="single"
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby=""
    className="pf-c-select__toggle pf-m-focus"
    disabled={false}
    id="Select Toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Select
    <CaretDownIcon
      className="pf-c-select__toggle-arrow"
    >
      <SVGIcon
        className="pf-c-select__toggle-arrow"
        color="currentColor"
        config={
          Object {
            "height": 512,
            "name": "CaretDownIcon",
            "svgPath": "M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z",
            "transform": "",
            "width": 320,
            "xOffset": 0,
            "yOffset": 0,
          }
        }
        noVerticalAlign={false}
        size="sm"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-select__toggle-arrow"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </SVGIcon>
    </CaretDownIcon>
  </button>
</SelectToggle>
`;

exports[`state hover 1`] = `
<SelectToggle
  aria-label=""
  aria-labelledby=""
  className=""
  hasClearButton={false}
  id="Select Toggle"
  isActive={false}
  isDisabled={false}
  isFocused={false}
  isHovered={true}
  isOpen={false}
  isPlain={false}
  onClose={[Function]}
  onEnter={[Function]}
  onToggle={[Function]}
  parentRef={
    Object {
      "current": <div />,
    }
  }
  type="button"
  variant="single"
>
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby=""
    className="pf-c-select__toggle pf-m-hover"
    disabled={false}
    id="Select Toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Select
    <CaretDownIcon
      className="pf-c-select__toggle-arrow"
    >
      <SVGIcon
        className="pf-c-select__toggle-arrow"
        color="currentColor"
        config={
          Object {
            "height": 512,
            "name": "CaretDownIcon",
            "svgPath": "M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z",
            "transform": "",
            "width": 320,
            "xOffset": 0,
            "yOffset": 0,
          }
        }
        noVerticalAlign={false}
        size="sm"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-select__toggle-arrow"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </SVGIcon>
    </CaretDownIcon>
  </button>
</SelectToggle>
`;
